--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.2",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
